frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: devverma99/waygood-frontend:latest
        imagePullPolicy: Always                       
        ports:
        - containerPort: 3000                        
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-lb
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000                          
  type: LoadBalancer
