ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waygood-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: waygood.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
